# twitter-content-bot

./: .dockerignore  .env.template  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  TASKS.md  TASK_3_2_COMPLETION.md  TASK_3_3_COMPLETION.md  demo_copy_buttons.py  demo_thread_generation.py  example_transcription_integration.py  main.py  pyproject.toml  requirements.txt  run_app.sh  test_copy_function.py  test_enhanced_ui.py  test_final.py  test_groq_simple.py  test_task1_2_integration.py  test_ui_integration.py  test_whisper_cli.py  test_whisper_simple.py  test_youtube_fix.py  validate_task1.py  validate_task1_2.py
docs/: BOT_DETECTION_SOLUTIONS.md  README.md  TASKS.md  TRANSCRIPTION_STATUS.md  TWITTER_THREAD_FEATURE.md
docs/prompts/: motivation.md  paper.md
docs/task-completions/: DIRECTORY_FIX.md  TASK_1_3_COMPLETION.md  TASK_3_1_COMPLETION.md  TASK_4_1_COMPLETION.md  UI_VIDEO_DISPLAY_FIX.md
scripts/: README.md
specs/: fix1.md  proxy-error-fix.md
src/: __init__.py
src/analyzer/: __init__.py  content_strategy.py  llm_analyzer.py  thread_generator.py
src/clipper/: __init__.py  clip_extractor.py  twitter_optimizer.py
src/core/: __init__.py  config.py  logger.py  pipeline.py
tests/: README.md  check_deployment.py  test_bot_detection.py  test_clip_extraction.py  test_downloader.py  test_integration.py  test_llm_analysis.py  test_setup.py  test_simple_bot_detection.py  test_streamlit_app.py  test_thread_generation.py  test_thread_simple.py  test_twitter_optimization.py  test_ui_components.py  test_whisper_integration.py  test_whisper_transcriber.py
(+12 files in other folders)
