[project]
name = "youtube-twitter-clipper"
version = "0.1.0"
description = "AI-powered YouTube to Twitter clip extraction tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "yt-dlp>=2023.10.13",
    "google-generativeai>=0.3.0",
    "groq>=0.4.1",
    "ffmpeg-python>=0.2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "faster-whisper>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "torch>=2.8.0",
]

[project.scripts]
youtube-clipper = "src.ui.streamlit_app:main"
